# gitsigner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  signed-commits.yml  test.yml
src/: audit.rs  classify.rs  cli.rs  config.rs  error.rs  exit.rs  git.rs  lib.rs  main.rs  types.rs
src/report/: human.rs  mod.rs  sarif.rs
tests/: allowed_signers_path.rs  bare_repo.rs  cli_exit_codes.rs  failure_reasons.rs  range_and_exemptions.rs  sarif_output.rs
tests/common/: fixture.rs
