[package]
name = "gitsigner"
version = "1.0.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Audit a git repository to ensure every commit is signed by an allowed identity."

[[bin]]
name = "gitsigner"
path = "src/main.rs"

[lib]
name = "gitsigner"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
